syntax = "proto3";

import "protocol/game/header.proto";
import "protocol/game/misc.proto";

package protocol;

option go_package = "./protobufs/protocol/game_protocol";

message GameServerProtocol {
	protocol.GameProtocolHeader header = 1;
	oneof message {
		PlayCard play_card = 2;
		PlayBid play_bid = 3;
		AccuseCheating accuse_cheating = 4;
	}
}

message PlayCard {
	protocol.Card card = 1;
}

message PlayBid {
	uint32 bid = 1;
}

message AccuseCheating {}